# mcp-companion

./: .gitignore  README.md  _quarto.yml  index.md
.github/workflows/: ci.yml  release.yml
bridge/: pyproject.toml
bridge/mcp_bridge/: __main__.py  auth.py  config.py  connections.py  fastvalidate.py  meta_tools.py  nvim_channel.py  nvim_proxy.py  server.py  sharedserver.py
bridge/tests/: test_auth.py  test_config.py  test_nvim_channel.py  test_nvim_e2e.py  test_session_filter.py
combiner/: LICENSE  README.md  pyproject.toml  test_simple_server.py
combiner/mcp_combiner/: __init__.py  __main__.py  auth.py  config.py  connections.py  fastvalidate.py  meta_tools.py  nvim_channel.py  nvim_proxy.py  server.py  sharedserver.py
combiner/tests/: test_auth.py  test_config.py  test_nvim_channel.py  test_nvim_e2e.py  test_reload_config.py  test_schema_normalization.py  test_session_filter.py  test_sharedserver.py
combiner/tests/fixtures/: servers.json
docs/: design.md  neovim-control.md  oauth.md  todo.md
docs/designs/: cc-acp-integration.md  connection-closed-before-response-investigation.md  native-neovim-server.md  per-chat-session-filtering.md
docs/schemas/: project.schema.json
lua/mcp_companion/: config.lua  init.lua  install.lua  project.lua  state.lua
lua/mcp_companion/bridge/: client.lua
lua/mcp_companion/cc/: approval.lua  editor_context.lua  init.lua  session_commands.lua  slash_commands.lua  tools.lua
lua/mcp_companion/combiner/: client.lua  init.lua
lua/mcp_companion/native/: channel.lua  init.lua  util.lua  winpick.lua
lua/mcp_companion/native/neovim/: buffers.lua  diagnostics.lua  files.lua  init.lua  resources.lua
lua/mcp_companion/ui/: init.lua
tests/: test_acp_tools_filter.lua  test_cc_tools.lua  test_multi_session.lua  test_native.lua  test_project.lua  test_real_servers.lua
