[project]
name = "mcp-bridge"
version = "0.1.0"
description = "MCP proxy bridge for mcp-companion — aggregates multiple MCP servers through a single Streamable HTTP endpoint"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "George Harker" }]
readme = "README.md"

dependencies = [
    "fastmcp>=3.0,<4",
    "pynvim>=0.6.0",
]

[dependency-groups]
dev = [
    "anyio[trio]>=4.0",
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.10",
]

[project.scripts]
mcp-bridge = "mcp_bridge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "mcp.*",
    "starlette.*",
    "pynvim.*",
]
ignore_missing_imports = true
