[project]
name = "mcp-combiner"
version = "0.6.0"
description = "An MCP aggregator — fronts multiple MCP servers behind a single Streamable HTTP endpoint, shareable across clients."
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "George Harker", email = "george@georgeharker.com" }]
readme = "README.md"
keywords = ["mcp", "fastmcp", "neovim", "proxy", "aggregator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastmcp>=3.0,<4",
    "pynvim>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/georgeharker/mcp-companion"
Repository = "https://github.com/georgeharker/mcp-companion"
Issues = "https://github.com/georgeharker/mcp-companion/issues"

[dependency-groups]
dev = [
    "anyio[trio]>=4.0",
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.10",
]

[project.scripts]
mcp-combiner = "mcp_combiner.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_combiner"]

# Keep local virtualenvs, caches, and build output out of the source distribution (otherwise a
# local `.venv` with absolute symlinks breaks `uv build`). The wheel only ships `mcp_combiner`.
[tool.hatch.build.targets.sdist]
exclude = [
    ".venv",
    ".venv.backup*",
    "*.backup*",
    ".*_cache",
    "dist",
    "tests/__pycache__",
    "test_simple_server.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "mcp.*",
    "starlette.*",
    "pynvim.*",
    "jsonschema.*",
]
ignore_missing_imports = true
